tests/neg-custom-args/captures/gears-problem.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/gears-problem.scala:19:62 --------------------------------
19 |    val fut: Future[T]^{fs*} = collector.results.read().right.get // error
   |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                               Found:    Future[T]^{collector.futures*}
   |                               Required: Future[T]^{fs*}
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/gears-problem.scala:24:34 --------------------------------
24 |    val fut2: Future[T]^{fs*} = r.get // error
   |                                ^^^^^
   |                                Found:    Future[box T^{}]^{collector.futures*}
   |                                Required: Future[T]^{fs*}
   |
   | longer explanation available when compiling with `-explain`
there were 4 deprecation warnings; re-run with -deprecation for details
